--- a/app/globals.css
+++ b/app/globals.css
@@ -72,3 +72,11 @@ body {
 .custom-scroll:hover::-webkit-scrollbar-thumb {
   background-color: #94a3b8; /* tailwind slate-400 */
 }
+/* Custom Scrollbar */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(100, 100, 100, 0.3);
+  border-radius: 3px;
+}
